--- a/pages/crud.html
+++ b/pages/crud.html
@@ -151,7 +151,13 @@
         </div>
 
     </footer>
-
+        <!-- Bootstrap JS y app.js -->
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+            AOS.init();
+        </script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        <script src="../js/app.js"></script>
   
 </body>
 
